# Memgraph

./: LICENSE
Forename/: README.md
Forename/ForenameServer/: Dockerfile  README.md  app.py  app.yaml  docker-compose.yml  manifest.yml  openApi.yaml  pyproject.toml  requirements.txt  start.sh
Forename/ForenameServer/forename/: db_operations.py  recommendation.py
Forename/ForenameServer/forename/database/: __init__.py  connection.py  memgraph.py
Forename/ForenameServer/templates/: forename-recommendation.html  forename_detail.html  forename_rule.html  forenames_rules.html  forenames_valid.html  graph.html  graph_gender.html
Forename/Import/: card_forenames_example.csv  web_forenames.csv
Forename/Jupyter/: Memgraph_Forename.ipynb
Forename/Modules/: README.md  text_util.py
