[tool.poetry]
name = "forename"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
pymgclient = "^0.1.0"
json2table = "^0.1.0"
json2html = "^0.1.0"
Flask-WTF = "^1.0."

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
